# WorkflowDemo

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_docker_image.yaml
command/: call_check_duplication.sh  call_data_cleaning.sh  call_data_loader.sh  call_data_profile.sh  call_generate_score.sh  call_ingest.sh  call_postgres_loader.sh  call_remove_dup.sh  call_rename_col.sh
k8s/: pokemon_data_pipeline.yaml  pokemon_data_pipeline_test.yaml
k8s/argo/demo/template/: pokemon_data_pipeline.yaml  pokemon_etl_template.yaml
k8s/argo/demo/workflow/: call_etl_template.yaml  pokemon_data_pipeline.yaml
k8s/argo/tuto/01_quick_start/: hello_argo.yaml
k8s/argo/tuto/03_cron_workflow/: README.md  cronflow-with-params.yaml
k8s/argo/tuto/04_workflow_template/: README.md
k8s/argo/tuto/04_workflow_template/global_param_template_example/: global_param_template.yaml  global_param_workflow.yaml  print_message_template.yaml
src/: utile.py
src/data_ingestion/: ingest_source_data.py  postgres_data_loader.py  s3_data_loader.py
src/data_profiling/: generate_data_profile.py
src/data_quality/: check_duplication.py
src/data_transformation/: data_cleaning.py  generate_pokemon_score.py  remove_duplication.py
src/log/: LogManager.py
src/storage/: LocalStorageEngine.py  S3StorageEngine.py  StorageEngineInterface.py
